fix whitespace at bottom of footer

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -26,6 +26,10 @@ footer.footer {
     height: $footerHeightTablet;
   }
 
+  @include respond-to(desktop) {
+    height: $footerHeightDesktop;
+  }
+
   .menuItems {
     width: 100%;
 
